// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionRollup should render default element 1`] = `
<div
  aria-label="more button text"
  className="extension-rollup"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconTile
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ExtensionRollup should render prop data 1`] = `
<div
  aria-label="more button text"
  className="extension-rollup"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconTile
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <ExtensionCount
      className="extension-rollup-count"
      isRollup={true}
      value={1}
    />
  </div>
</div>
`;

exports[`ExtensionRollup should render with function callbacks 1`] = `
<div
  aria-label="more button text"
  className="extension-rollup"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconTile
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ExtensionRollup should render with selection callback 1`] = `
<div
  aria-label="more button text"
  className="extension-rollup"
  data-item-show-focus={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconTile
        data-name="Layer 1"
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;
